<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterEventAttendanceActivity"
    android:orientation="vertical">

    <!-- ########################    PERSON ID    ######################## -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/label_event_attendance_person" />

    <Spinner
        android:id="@+id/editPerson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_person"/>

    <!-- ########################    EVENT MEETING ID    ######################## -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/label_event_attendance_event_meeting" />

    <Spinner
        android:id="@+id/editEventMeeting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_event_meeting"/>


    <!-- ########################    EVENT ATTENDANCE CHECK IN    ######################## -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/label_event_attendance_check_in" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editCheckInDate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editCheckInTime"
            android:layout_gravity="right" />
    </LinearLayout>

    <!-- ########################    EVENT ATTENDANCE CHECK OUT    ######################## -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/label_event_attendance_check_out" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editCheckOutDate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editCheckOutTime"
            android:layout_gravity="right" />
    </LinearLayout>

</LinearLayout>
