<?xml version="1.0" encoding="utf-8" ?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <!-- ########################    PERSON PHOTO    ######################## -->

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:id="@+id/viewPhoto"
            android:scaleType="centerCrop"/>

        <!-- ########################    PERSON NAME    ######################## -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_person_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/viewName" />

        <!-- ########################    PERSON EMAIL    ######################## -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_person_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/viewEmail" />

        <!-- ########################    PERSON REGISTRATION NUMBER    ######################## -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_person_registration_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/viewRegistrationNumber" />

    </LinearLayout>
</ScrollView>